--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   },
   "homepage": "https://github.com/livelikeabel/our-korea-trip#readme",
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
@@ -31,6 +35,7 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "lodash": "^4.17.11"
   }
 }
