--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "dev": "webpack-dev-server --env.env=dev",
     "dev:bundleanalyzer": "npm run dev -- --env.addons=bundleanalyzer",
     "prebuild": "rimraf dist",
@@ -27,15 +28,20 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^2.0.1",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.7.1",
     "react-hot-loader": "^4.8.4",
+    "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
