--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
+    "mini-css-extract-plugin": "^0.6.0",
     "react-hot-loader": "^4.8.4",
     "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.3",
@@ -53,9 +54,11 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "lodash": "^4.17.11",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-prop-types": "^0.4.0",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "sass-loader": "^7.1.0"
   }
 }
