--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "@babel/polyfill": "^7.4.4",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.6.1",
     "react-prop-types": "^0.4.0",
     "react-router-dom": "^5.0.0",
     "sass-loader": "^7.1.0"
