--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.7.1",
@@ -53,6 +54,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@material-ui/core": "^3.9.3",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
