--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/polyfill": "^7.4.4",
     "@material-ui/core": "^3.9.3",
     "lodash": "^4.17.11",
+    "mapbox-gl": "^0.54.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
